5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4150/executions/1638_651.log
== TEST (2019-04-11 11:23:57) 
-- CODE:
a = float(input("sua altura: ")
b = input("sexo: ")
			 
ph = (72.7*a)-58
pm = (62.1 * a) - 44.7
			
if (b.upper() == "M"):
	print(round(ph, 2))
else:
	print(round(pm, 2))
			 
-- ERROR:
File "XXXX", line 2
    b = input()
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:24:42) 
-- CODE:
a = float(input("sua altura: "))
b = input("sexo: ")
			 
ph = (72.7*a)-58
pm = (62.1 * a) - 44.7
			
if (b.upper() == "M"):
	print(round(ph, 2))
else:
	print(round(pm, 2))
			 
-- OUTPUT:
17.4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 11:25:04) 
-- CODE:
a = float(input("sua altura: "))
b = input("sexo: ")
			 
ph = (72.7*a)-58
pm = (62.1 * a) - 44.7
			
if (b.upper() == "M"):
	print(round(ph, 2))
else:
	print(round(pm, 2))
			 
-- EXECUTION TIME:
0.170862
-- TEST CASE 1:
---- input:
1.0
F
---- correct output:
17.4
---- user output:
17.4
-- TEST CASE 2:
---- input:
1.234
M
---- correct output:
31.71
---- user output:
31.71
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
